--- a/package.json
+++ b/package.json
@@ -36,12 +36,17 @@
   "homepage": "https://github.com/uoc-advanced-html-css/uoc-boilerplate#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.8.3",
+    "postcss": "^8.4.23",
     "postcss-preset-env": "^7.8.3",
     "posthtml-include": "^1.7.4",
     "rimraf": "^3.0.2",
-    "sharp": "0.31.1"
+    "sharp": "0.31.1",
+    "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0"
   }
 }
